@@ -1,3 +1,10 @@
+2021-03-08  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/ios-dev-file.c (ios_dev_file_open): Handle `open' flags
+	better.
+	* poke/pk-save.pk (save): Adapt to new handling of flags in the
+	file IOD.
+
 2021-03-07  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/poke.texi (Struct Methods): Explain how methods have the
